# grpc-stream-client

./: .gitignore  LICENSE  README.md  config.yaml  feed_to_csv.py  main.py  print_feed_as_json.py  pyproject.toml  requirements.txt  websocket.py
.github/workflows/: python-tests.yml  uv_unit_tests.yaml
example/: print_feed_as_json.py
grpc_stream_client/: book.py  config.py  feed_handler.py  fills.py  helpers.py  market_info.py  serde.py  subaccounts.py  taker_order_metrics.py  validation.py  validation_feed_handler.py
scripts/: compare_depth.ipynb  compare_depth.py  feed_to_csv.py
src/: book.py  config.py  feed_handler.py  fills.py  helpers.py  market_info.py  serde.py  subaccount_handler.py  subaccounts.py  taker_order_metrics.py  validation.py  validation_feed_handler.py
test/: test_book.py  test_feed_handler.py  test_fills.py  test_market_info.py  test_subaccounts.py
